# OpenLPT_GUI

./: .gitignore  CMakeLists.txt  GUI.py  README.md  _version.py  asan.54652  compile_log  install_linux.sh  install_mac.command  install_windows.bat  pyproject.toml  requirements.txt  setup.py  update_openlpt.bat
.github/workflows/: linux_build.yml  macos_build.yml  pypi_publish.yml  sync_to_lab.yml
cmake/: OpenLPTConfig.cmake.in  bindings.cmake  openLPT.cmake
demo/python/: demo_bubble.ipynb  demo_lpt_bubble.ipynb  demo_lpt_tracer.ipynb  demo_object.ipynb  demo_stb.ipynb  demo_stereomatch.ipynb  img_aug_debug.csv
gui/: app.py  create_shortcut.py  style.qss
gui/utils/: auto_updater.py  update_checker.py
gui/views/: results_view.py  tracking_settings_view.py  tracking_view.py
inc/libMath/: Matrix.h  STBCommons.h  myMATH.h
inc/libObject/: BubbleRefImg.h  CircleIdentifier.h  ObjectFinder.h  ObjectInfo.h
inc/libObject/BubbleCenterAndSizeByCircle/: BubbleCenterAndSizeByCircle_data.h
inc/libObject/BubbleResize/: BubbleResize.h  ResizeBubble_data.h
inc/libSTB/: Config.h  STB.h  Shake.h  StereoMatch.h  Track.h
modules/image_preprocessing/: view.py
modules/vsc/: __init__.py  optimizer.py  vsc_service.py
src/: bindings.cpp  main.cpp
src/pybind_OpenLPT/: pyBubbleRefImg.cpp  pyBubbleResize.cpp  pyCircleIdentifier.cpp  pyConfig.cpp  pyIPR.cpp  pyInterface.cpp  pyMatrix.cpp  pyObjectFinder.cpp  pyObjectInfo.cpp  pyOpenLPT.cpp  pySTB.cpp  pyShake.cpp  pyStereoMatch.cpp  pyTrack.cpp  pymyMath.cpp
src/srcMath/: Camera.cpp  ImageIO.cpp  Matrix.hpp  myMATH.cpp
src/srcObject/: BubbleRefImg.cpp  CircleIdentifier.cpp  ObjectFinder.cpp  ObjectFinder.hpp  ObjectInfo.cpp
src/srcSTB/: Config.cpp  IPR.cpp  PredField.cpp  STB.cpp  STB.hpp  Shake.cpp  ShakeDebug.cpp  Shake_Bubble.cpp  StereoMatch.cpp  StereoMatch.hpp  StereoMatch_Bubble.hpp  VSC.cpp
(+1644 files in other folders)
