[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[project]
name = "openlpt"
dynamic = ["version"]
description = "Open-source Lagrangian Particle Tracking (LPT) with GUI and CLI"
readme = "README.md"
authors = [{ name = "JHU Ni Research Lab", email = "szhong12@jhu.edu" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pybind11>=2.13",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.0.0",
    "numba>=0.60.0",
    "matplotlib>=3.7.0",
    "pyside6>=6.6.0",
    "qtawesome>=1.3.0",
    "cmake>=3.15",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Sinchy/pyOpenLPT"

[project.scripts]
openlpt = "openlpt:main"
openlpt-gui = "openlpt:launch_gui"

[tool.setuptools]
py-modules = ["openlpt", "_version"]
packages = ["gui", "modules"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "_version.__version__" }

[tool.cibuildwheel]
# Build only 64-bit platforms for Python 3.10+
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*", "pp*"]
test-requires = "pytest"
test-command = "python -c \"import openlpt; print('OpenLPT imported successfully')\""

[tool.cibuildwheel.linux]
before-all = "yum install -y libomp-devel || apt-get install -y libomp-dev"

[tool.cibuildwheel.macos]
before-build = "brew install libomp"
environment = { LDFLAGS="-L$(brew --prefix libomp)/lib", CPPFLAGS="-I$(brew --prefix libomp)/include" }
